# c-lib-tm-tc

./: CMakeLists.txt  README.md
include/: message_handler.h  telecommand_arguments_interface.h  telecommand_interface.h  telecommands_manager.h  telemetry_interface.h  telemetry_manager.h
src/: message_handler.c  telecommand_arguments_interface.c  telecommand_interface.c  telecommands_manager.c  telemetry_interface.c  telemetry_manager.c
